Used slim as a router component

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "slim/slim": "^3.0"
+    },
     "autoload": {
         "psr-4": {
             "Chabanenko\\SimpleQuiz\\DataProvider\\": "./DataProvider"
